--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="grid">
     <header>
-        <a href="/" target="_blank" rel="noopener noreferrer"><img src="./img/logo.png" alt="logo"></a>
+        <a href="/" target="_blank" rel="noopener noreferrer"><img src="./public/img/logo.png" alt="logo"></a>
         <div class='icon-menu' >
-            <img src="./img/square.svg" alt="hamburger icon">
+            <img src="./public/img/square.svg" alt="hamburger icon">
         </div>
         <div class='menu'>
         <nav class="nav" >
@@ -24,7 +24,7 @@
         <div class='search'>
             <input type="text" placeholder="search">
             <div class= 'search-img'>
-                <img src="./img/search.png" alt="search">
+                <img src="./public/img/search.png" alt="search">
             </div>
             <a href="#">search</a>
         </div>
@@ -34,11 +34,11 @@
     <section class='sidenav'>
         <nav>
             <ul>
-                <li><a href="#game"> <img src="./img/game.svg" alt="game"></a></li>
-                <li><a href="#mobile"><img src="./img/mobile.svg" alt="mobile"></a></li>
-                <li><a href="#headphone"><img src="./img/headphone.svg" alt="headphone"></a></li>
-                <li><a href="#mp3"><img src="./img/mp3.svg" alt="mp3"></a></li>
-                <li><a href="#pc"><img src="./img/computer.svg" alt="wristwatch"></a></li>
+                <li><a href="#game"> <img src="./public/img/game.svg" alt="game"></a></li>
+                <li><a href="#mobile"><img src="./public/img/mobile.svg" alt="mobile"></a></li>
+                <li><a href="#headphone"><img src="./public/img/headphone.svg" alt="headphone"></a></li>
+                <li><a href="#mp3"><img src="./public/img/mp3.svg" alt="mp3"></a></li>
+                <li><a href="#pc"><img src="./public/img/computer.svg" alt="wristwatch"></a></li>
             </ul>
         </nav>
     </section>
@@ -46,20 +46,20 @@
     <main class="main">
         <h1 class="col-wide">Hobbies</h1>
         <p class="col-wide"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s  </p>
-        <img src="./img/pc.jpg" alt="pc" id='pc' class="col-wide">
+        <img src="./public/img/pc.jpg" alt="pc" id='pc' class="col-wide">
         <p class='small-font col-md-2'> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo qui, neque ipsum, delectus commodi accusamus placeat odio, suscipit obcaecati aliquid deleniti sed pariatur quam unde quod soluta? Eveniet, voluptate aliquid?</p>
-        <img class='col-md-2' src="./img/headphone.jpg" alt="headphone" id='headphone'>
-        <img src="./img/phone.jpg" alt="phone" id='mobile' class="col-wide">
+        <img class='col-md-2' src="./public/img/headphone.jpg" alt="headphone" id='headphone'>
+        <img src="./public/img/phone.jpg" alt="phone" id='mobile' class="col-wide">
         <p class="col-wide"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>     
-        <img src="./img/gamer.jpg" alt="gamer" id='gamer' class="col-wide">
+        <img src="./public/img/gamer.jpg" alt="gamer" id='gamer' class="col-wide">
     </main>
 
     <aside class="aside">
         <div>
-            <img src="./img/ads.svg" alt="advertising">
+            <img src="./public/img/ads.svg" alt="advertising">
         </div>
         <div>
-            <img src="./img/stock-market.svg" alt="advertising">
+            <img src="./public/img/stock-market.svg" alt="advertising">
         </div>
     </aside>
     <footer class="footer">
@@ -68,6 +68,6 @@
 </div>
 
 </body>
-<script src="bundle.js"></script>
+<script src="./public/bundle.js"></script>
 
 </html>
